--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <ul class="navbar-nav">
+        <ul *ngIf="isLoggedIn()" class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="home">Home</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="child">ChildNode</a>
             </li>
@@ -24,5 +27,10 @@
             </li>
         </ul>
     </div>
+   <div>
+    <label *ngIf="isLoggedIn()"> Welcome: {{user}} </label>
+   </div>
+    <a class="logoutbtn" *ngIf="isLoggedIn()" (click)="logout()"> Logout</a> 
 </nav>
+
 <router-outlet></router-outlet>
