--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="product">product</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="Details">Details</a>
+            </li>
         </ul>
     </div>
    <div>
