--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,1 +1,9 @@
-<p>details works!</p>
+
+<h5>Template form</h5>
+<app-template-form> </app-template-form>
+
+<h5>Reactive form</h5>
+<app-reactive-form> </app-reactive-form>
+
+<h5>Javascript form</h5>
+<app-javascript-form></app-javascript-form>
