--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,1 +1,61 @@
 
+<!-- Suggested code may be subject to a license. Learn more: ~LicenseLog:1035619298. -->
+<div class="userform">
+    <form>
+    <label>Name:</label>
+    <input type="text" name="name" [(ngModel)]="name" #username="ngModel" pattern="^[A-Za-z ]+$" required/>
+    
+    <br/>
+    <br/>
+    <div class="row col-12">
+      <div class="col">
+    <label>Date1:</label>
+    <input type="date"  name="date1" [(ngModel)]="date1" #dateref="ngModel"  required/>
+    </div>
+    <div class="col">
+    <label>Date2:</label>
+    <input type="date"  name="date2" [(ngModel)]="date2" #dateref="ngModel" required/>
+    </div>
+    </div>
+    <br/>
+    <br/>
+    
+    <label>Time in:</label>
+    <input type="time" name="timein" [(ngModel)]="timein" #timecheckein="ngModel" required/>
+    
+    <br/>
+    <br/>
+    <label>Time out:</label>
+    <input type="time"  name="timeout" [(ngModel)]="timeout" #timecheckedout="ngModel" required/>
+    
+    <br/>
+    <br/>
+    
+    <label>Signup:</label>
+    <input type="radio" name="decsion" [(ngModel)]="decsion" required #decisionRef="ngModel" value="yes"/>Yes
+    <input type="radio" name="decsion" [(ngModel)]="decsion" value="no"/>No
+    <br/>
+    <br/>
+    
+    <label>Hobbies:</label>
+    <input type="checkbox" name="Reading" required [(ngModel)]="Reading" #readingRef="ngModel" /> Reading
+    <input type="checkbox" name="Coding" required [(ngModel)]="Coding" #codingRef="ngModel"/>Coding
+    <input type="checkbox" name="Traveling" required [(ngModel)]="Traveling" #travelingRef="ngModel"/>Traveling
+    <br/>
+    <br/>
+    
+    <label>your favorite cities:</label>
+    <select name="options" id="options" [(ngModel)]="selectedCity"
+    required>
+    
+        <option value="">-- Select a city --</option>
+        <option value="delhi">delhi</option>
+        <option value="hyderbad">hyderbad</option>
+        <option value="chennai">chennai</option>
+        <option value="vijayawada">vijayawada</option>
+    
+      </select>
+      
+      <button type="submit">Submit</button>
+    </form>
+    </div>
