--- a/src/app/reactive-form/reactive-form.component.css
+++ b/src/app/reactive-form/reactive-form.component.css
@@ -1,10 +1,6 @@
 .userform{
     width: 100%;
-    display: flex;
-    align-items: center;
     border: 2px solid black;
-    margin-left: 80px;
-    padding-left: 90px;
 }
 .errormes{
     color:red;
@@ -12,4 +8,12 @@
 
 .top{
     margin-top:35px;
+}
+
+.btn-style{
+    display:flex;
+    justify-content: center;
+}
+.error{
+    color:red;
 }
