--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -5,6 +5,9 @@
 <br/>
 <button type="button" id="clickButton" (click)="emitUserName()"> changeName</button>
 
+<button (click)="bestWishes()">Send Best Wishes</button>
+
+
 <h3>Select an Emoji:</h3>
     <button (click)="selectEmoji('😀')">😀</button>
     <button (click)="selectEmoji('❤️')">❤️</button>
