--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -28,6 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="Details">Details</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="profile">Profile</a>
+            </li>
         </ul>
     </div>
    <div>
