--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
 <p>home works!</p>
+
+
+<table>
+    <tr>
+      <th>ID</th>
+      <th>firstname</th>
+      <th>gender</th>
+    </tr>
+    <tr *ngFor="let user of userList">
+      <td>{{user.id}}</td>
+      <td>{{user.firstName}}</td>
+      <td>{{user.gender}}</td>
+    </tr>
+    
+  </table>
