--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -28,10 +28,18 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="Details">Details</a>
             </li>
-            <li class="nav-item">
+           
+             <li class="nav-item">
                 <a class="nav-link" routerLink="profile">Profile</a>
             </li>
-        </ul>
+               
+                    <li class="nav-item"> 
+                        <a class="nav-link" routerLink="todo">todo</a>
+                    </li>
+                
+            </ul>
+           
+        
     </div>
    <div>
     <label *ngIf="isLoggedIn()"> Welcome: {{user}} </label>
