--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -55,7 +55,7 @@
 <!-- Style binding -->
 <p [style.color]="myColor">This text is styled with dynamic color</p>
 
-<p [appHighlight]="'lightblue'">This gets highlighted using a custom directive!</p>
+<p [appHighlight]="'pink'">This gets highlighted using a custom directive!</p>
 <!-- Directive property binding is just a way of passing values from your component to a directive — either built-in or custom — using square bracket syntax: -->
    <!-- two way binding -->
    <!-- What's happening here?-->
