--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -36,6 +36,14 @@
                     <li class="nav-item"> 
                         <a class="nav-link" routerLink="todo">todo</a>
                     </li>
+
+                    <li class="nav-item"> 
+                        <a class="nav-link" routerLink="sample">sample</a>
+                    </li>
+
+                    <li class="nav-item"> 
+                        <a class="nav-link" routerLink="mainproducts">MainProducts</a>
+                    </li>
                 
             </ul>
            
