--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -44,6 +44,9 @@
                     <li class="nav-item"> 
                         <a class="nav-link" routerLink="mainproducts">MainProducts</a>
                     </li>
+                    <li class="nav-item"> 
+                        <a class="nav-link" routerLink="student">student</a>
+                    </li>
                 
             </ul>
            
