--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -58,31 +58,31 @@
       <label class="labelstyle">Science</label>
       <input type="text" id="Science" [(ngModel)]="science" placeholder="Science"/>
        <span class="error"*ngIf="requiredsubject">subject is required</span>
-       <span class="error"*ngIf="validNumberError">Not a valid number</span>
+       <span class="error"*ngIf="validScienceError">Not a valid number</span>
 </div>
 <div class="col-6">
       <label class="labelstyle">Math</label>
       <input type="text" id="Math" [(ngModel)]="math" placeholder="Math"/>
        <span class="error"*ngIf="requiredsubject">subject is required</span>
-       <span class="error"*ngIf="validNumberError">Not a valid number</span>
+       <span class="error"*ngIf="validMathError">Not a valid number</span>
 </div>
 <div class="col-6">
       <label class="labelstyle">English</label>
       <input type="text" id="English" [(ngModel)]="english" placeholder="English"/>
        <span class="error" *ngIf="requiredsubject">subject is required</span>
-       <span class="error"*ngIf="validNumberError">Not a valid number</span>
+       <span class="error"*ngIf="validEnglishError">Not a valid number</span>
 </div>
 <div class="col-6">
       <label class="labelstyle">Social</label>
       <input type="text" id="Social" [(ngModel)]="social" placeholder="Social"/>
        <span class="error"*ngIf="requiredsubject">subject is required</span>
-       <span class="error"*ngIf="validNumberError">Not a valid number</span>
+       <span class="error"*ngIf="validSocialError">Not a valid number</span>
 </div>
 <div class="col-6">
       <label class="labelstyle">Computer</label>
       <input type="text" id="Computer" [(ngModel)]="computer" placeholder="Computer"/>
          <span class="error"*ngIf="requiredsubject">subject is required</span>
-         <span class="error"*ngIf="validNumberError">Not a valid number</span>
+         <span class="error"*ngIf="validComputerError">Not a valid number</span>
 </div>
 <div class="col-6">
     <label class="labelstyle">Studenttype</label>
