--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -84,6 +84,10 @@
                     <li> 
                         <a class="nav-link" routerLink="todo">todo</a>
                     </li>
+
+                    <li> 
+                        <a class="nav-link" routerLink="createUser">createUser</a>
+                    </li>
                 </ul>
               </li>
                    
